FIX minor spacing issue

--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,6 @@
     RESET
 */
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 :root {
     --bg_green: #1ABC9C;
 }
